--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "monsterlessonsacademy",
-  "version": "1.0.0",
-  "repository": "git@monsterlessonsacademy.github.com:monsterlessonsacademy/monsterlessonsacademy.git",
-  "author": "Oleksandr Kocherhin <monsterlessonsacademy@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "compile": "rm -rf dist/lib && tsc && tsc --build tsconfig.es5.json"
-  },
-  "devDependencies": {
-    "parcel": "^2.5.0",
-    "typescript": "^4.6.3"
-  }
+    "name": "neo-swap-npm",
+    "version": "1.0.0",
+    "repository": "",
+    "author": "",
+    "license": "MIT",
+    "scripts": {},
+    "main": "index.js",
+    "dependencies": {
+        "@metaplex-foundation/js": "^0.19.3",
+        "@solana/spl-token": "^0.3.6",
+        "@solana/web3.js": "^1.66.2",
+        "@project-serum/anchor": "0.25.0",
+        "bs58": "^5.0.0"
+    },
+    "devDependencies": {
+        "parcel": "^2.5.0",
+        "typescript": "^4.6.3"
+    }
 }
