--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "neo-swap-npm",
+    "name": "@biboux.neoswap/neo-swap-npm",
     "version": "1.0.0",
     "repository": "",
     "author": "",
@@ -8,9 +8,10 @@
     "main": "index.js",
     "dependencies": {
         "@metaplex-foundation/js": "^0.19.3",
+        "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
+        "@project-serum/anchor": "0.25.0",
         "@solana/spl-token": "^0.3.6",
         "@solana/web3.js": "^1.66.2",
-        "@project-serum/anchor": "0.25.0",
         "bs58": "^5.0.0"
     },
     "devDependencies": {
