--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bs58": "^5.0.0"
     },
     "devDependencies": {
+        "@types/debug": "^4.1.8",
         "@types/node-fetch": "^2.6.4",
         "parcel": "^2.5.0",
         "typescript": "^4.6.3"
