--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@project-serum/anchor": "^0.26.0",
         "@solana/spl-token": "^0.3.6",
         "@solana/web3.js": "^1.66.2",
-        "bs58": "^5.0.0"
+        "bs58": "^5.0.0",
+        "@metaplex-foundation/beet": "^0.7.1"
     },
     "devDependencies": {
         "@types/debug": "^4.1.8",
