--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -9,6 +9,8 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "esModuleInterop": true
+        // "pretty": true,
+        // "skipLibCheck": true
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
 }
