--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,12 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "strict": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        // "allowJs": true,
+        // "alwaysStrict": false
+        // "checkJs": true,
+        // "skipLibCheck": true
+        "strictFunctionTypes": true
     },
     "include": ["src/**/*"]
 }
