--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -9,6 +9,7 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "include": ["src/**/*"]
 }
