--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "@neoswap/solana",
-    "version": "0.2.0",
+    "version": "0.2.4",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/neoswap-ai/neo-swap-npm.git"
+        "url": "git+htt// Data after initializing the swapps://github.com/neoswap-ai/neo-swap-npm.git"
     },
     "description": "NPM package for NeoSwap",
     "author": "NeoSwap",
@@ -14,7 +14,7 @@
     "files": [
         "/dist/lib",
         "./package.json",
-        "./dist/README.md"
+        "./README.md"
     ],
     "scripts": {
         "compile": "rm -rf dist/lib && tsc && tsc --build tsconfig.es5.json"
