--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@neoswap/solana",
-    "version": "0.2.18",
+    "version": "0.2.28",
     "repository": {
         "type": "git",
         "url": "git+htt// Data after initializing the swapps://github.com/neoswap-ai/neo-swap-npm.git"
@@ -26,13 +26,12 @@
         "@project-serum/anchor": "^0.26.0",
         "@solana/spl-token": "^0.3.7",
         "@solana/web3.js": "^1.66.2",
-        "bs58": "^5.0.0"
-    },
-    "devDependencies": {
+        "bs58": "^5.0.0",
         "@types/bn.js": "^5.1.1",
         "@types/debug": "^4.1.8",
         "@types/node-fetch": "^2.6.4",
         "parcel": "^2.5.0",
         "typescript": "^4.6.3"
-    }
+    },
+    "devDependencies": {}
 }
