--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@neoswap/solana",
-    "version": "0.3.0-beta84",
+    "version": "0.3.0-beta92",
     "repository": {
         "type": "git",
         "url": "git+htt// Data after initializing the swapps://github.com/neoswap-ai/neo-swap-npm.git"
     },
-    "description": "NPM package for NeoSwap",
+    "description": "NPM package for NeoSwap test",
     "author": "NeoSwap",
     "license": "MIT",
     "main": "./dist/lib/es5/index.js",
@@ -21,8 +21,10 @@
     },
     "dependencies": {
         "@metaplex-foundation/beet": "^0.7.1",
-        "@metaplex-foundation/js": "^0.19.4",
+        "@metaplex-foundation/js": "^0.19.5",
+        "@metaplex-foundation/mpl-bubblegum": "^0.8.0",
         "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
+        "@metaplex-foundation/mpl-toolbox": "^0.9.1",
         "@project-serum/anchor": "^0.26.0",
         "@solana/spl-token": "^0.3.7",
         "@solana/web3.js": "^1.66.2",
@@ -31,7 +33,6 @@
         "@types/node-fetch": "^2.6.4",
         "bs58": "^5.0.0",
         "parcel": "^2.5.0",
-        "typescript": "^4.6.3",
-        "@metaplex-foundation/mpl-bubblegum": "^1.0.1"
+        "typescript": "^4.6.3"
     }
 }
