--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.28.0",
-        "@metaplex-foundation/beet": "^0.7.1",
         "@metaplex-foundation/js": "^0.19.5",
         "@metaplex-foundation/mpl-bubblegum": "^0.8.0",
         "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
         "@metaplex-foundation/mpl-toolbox": "^0.9.1",
         "@project-serum/anchor": "^0.26.0",
         "@solana/spl-token": "^0.3.7",
-        "@solana/web3.js": "^1.66.2",
+        "@solana/web3.js": "1.87.6",
+        "@solana/spl-account-compression": "0.2.0",
         "@types/bn.js": "^5.1.1",
         "@types/debug": "^4.1.8",
         "@types/node-fetch": "^2.6.4",
