--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "scripts": {
         "compile": "rm -rf dist/lib && tsc && tsc --build tsconfig.es5.json"
     },
+    "type": "module",
     "dependencies": {
         "@coral-xyz/anchor": "^0.28.0",
         "@metaplex-foundation/js": "^0.19.5",
@@ -36,6 +37,7 @@
         "typescript": "^4.6.3"
     },
     "devDependencies": {
-        "@types/bn.js": "^5.1.5"
+        "@types/bn.js": "^5.1.5",
+        "tsx": "^4.7.1"
     }
 }
