--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "ES6",
+        "module": "ESNext",
         "target": "ES5",
         "lib": ["ES2020", "DOM"],
         "declaration": true,
@@ -12,5 +12,6 @@
         "strictFunctionTypes": true,
         "skipLibCheck": true
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
+    "ts-node": { "esm": true, "experimentalSpecifierResolution": "node" }
 }
