--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
         "skipLibCheck": true
     },
     "include": ["src/**/*"],
-    "ts-node": { "esm": true, "experimentalSpecifierResolution": "node" }
+    "exclude": ["node_modules", "**/*.test.ts"]
 }
