--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@neoswap/solana-collection-swap",
-    "version": "0.6.1-Beta0",
+    "version": "0.7.0-Beta3",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/neoswap-ai/neo-swap-npm.git"
@@ -20,11 +20,14 @@
         "compile": "rm -rf dist/lib && tsc && tsc --build tsconfig.es5.json"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.29.0",
+        "@coral-xyz/anchor": "^0.30.1",
+        "@metaplex-foundation/digital-asset-standard-api": "^1.0.4",
         "@metaplex-foundation/js": "^0.20.1",
         "@metaplex-foundation/mpl-bubblegum": "0.8.0",
+        "@metaplex-foundation/mpl-core": "^1.0.2",
         "@metaplex-foundation/mpl-token-metadata": "2.13.0",
         "@metaplex-foundation/mpl-toolbox": "^0.9.4",
+        "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
         "@solana/spl-token": "0.3.7",
         "@solana/wallet-adapter-base": "^0.9.23",
         "@solana/web3.js": "^1.91.2"
