--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@neoswap/solana-collection-swap",
-    "version": "0.7.4-beta2",
+    "version": "0.8.1-beta0",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/neoswap-ai/neo-swap-npm.git"
@@ -27,7 +27,9 @@
         "@metaplex-foundation/mpl-core": "^1.0.2",
         "@metaplex-foundation/mpl-token-metadata": "2.13.0",
         "@metaplex-foundation/mpl-toolbox": "^0.9.4",
+        "@metaplex-foundation/umi": "^0.9.2",
         "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+        "@noble/hashes": "^1.4.0",
         "@solana/spl-account-compression": "^0.2.1",
         "@solana/spl-token": "0.3.7",
         "@solana/wallet-adapter-base": "^0.9.23",
