--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
         "@noble/hashes": "^1.4.0",
         "@solana/spl-account-compression": "^0.2.1",
-        "@solana/spl-token": "0.3.7",
+        "@solana/spl-token": "^0.4.3",
         "@solana/wallet-adapter-base": "^0.9.23",
         "@solana/web3.js": "^1.91.2",
         "@tensor-hq/tensor-common": "^8.0.8",
